Commit from TeleportHQ

--- a/src/views/home.css
+++ b/src/views/home.css
@@ -28,6 +28,7 @@
 .home-text {
   color: var(--dl-color-scheme-green80);
   margin-right: var(--dl-space-space-twounits);
+  text-decoration: none;
 }
 .home-text01 {
   color: var(--dl-color-scheme-green80);
@@ -36,6 +37,12 @@
 .home-text02 {
   color: var(--dl-color-scheme-green80);
   margin-right: var(--dl-space-space-twounits);
+}
+.home-link {
+  text-decoration: none;
+}
+.home-link1 {
+  text-decoration: none;
 }
 .home-burger-menu {
   fill: #105749;
@@ -207,11 +214,9 @@
 .home-image5 {
   width: 50%;
 }
-.home-hero-image3 {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 48px;
+.home-video {
+  width: 597px;
+  height: 385px;
 }
 .home-content3 {
   width: 40%;
@@ -417,6 +422,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  flex-direction: row;
   justify-content: space-between;
 }
 .home-text33 {
@@ -573,11 +579,6 @@
   .home-image5 {
     width: 100%;
     padding-bottom: var(--dl-space-space-threeunits);
-  }
-  .home-hero-image3 {
-    width: 100%;
-    margin-left: 0px;
-    margin-bottom: 0px;
   }
   .home-content3 {
     width: 100%;
